--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1678,7 +1678,8 @@ footer {
         h3{
           display: none;
           font-size: 16px;
-          line-height: 700;
+          line-height: 22px;
+          font-weight: 700;
           width: 120px;
           letter-spacing: 4px;
           line-height: 22px;
