--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -69,6 +69,9 @@ img {
   @media (max-width: #{$sm}) {
     padding: 13px 0 14px 0;
   }
+  @media (max-width: #{$xss}) {
+    font-size: 18px;
+  }
  
 }
 
